2006-08-23  Mike Kelly  <pioto@pioto.org>

	* bash/adduser.bash.in, bash/addgroup.bash.in: Add a check in the free
	uid/gid search step to find out if we already have the user or group
	with a uid/gid in the requested range. If so, we want to continue to
	use that uid/gid.

2006-08-23  Mike Kelly  <pioto@pioto.org>

	* bash/db.bash.in: Error in my logic, should use && where I was using
	||.

2006-08-23  Mike Kelly  <pioto@pioto.org>

	* bash/common/read_userdata.bash.in: Another "doh". ${USERFILE} !=
	${userfile}...

2006-08-23  Mike Kelly  <pioto@pioto.org>

	* bash/common/read_groupdata.bash.in: Major "doh!". userid !=
	groupid...

2006-08-22  Mike Kelly  <pioto@pioto.org>

	* bash/common/read_userdata.bash.in,
	bash/common/read_groupdata.bash.in: Fix a bug that caused all the
	values to end up being empty.

2006-08-22  Mike Kelly  <pioto@pioto.org>

	* configure.ac, NEWS: Prepare for 0.4.2.

	+ Release: 0.4.2

2006-08-22  Mike Kelly  <pioto@pioto.org>

	* bash/: Cleanup all our scripts here. Die in more places as
	appropriate, such as if we are totally unable to complete an action
	for all backends. Properly quote "$@" when calling the main()
	function.  Make use of debug_msg(). 

2006-08-22  Mike Kelly  <pioto@pioto.org>

	* bash/common/read_userdata.bash.in
	bash/common/read_groupdata.bash.in: Misc. cleanup. Make us die if we
	can't find some value for one of the variables (we should normally at
	least be able to read the default fallbacks).

	* bash/common/getent_TEST.bash: Rename with a .in suffix, to keep
	things consistent.

2006-08-22  Mike Kelly  <pioto@pioto.org>

	* bash/common/functions.bash.in: Added debug_msg(), which is used for
	displaying less-important messages only when the environment has DEBUG
	set.

2006-08-22  Mike Kelly  <pioto@pioto.org>

	* eselect/users.eselect.in: Cleanup our eselect module to just use
	@SCRIPTDIR@ instead of that other autotools cruft.

2006-08-22  Mike Kelly  <pioto@pioto.org>
