@@ -1,3 +1,10 @@
+2006-08-27  Mike Kelly  <pioto@pioto.org>
+
+	* bash/db.bash.in, eselect/users.eselect.in: Clean up the code that
+	loops over the database files.
+
+	* bash/adduser.bash.in: Fix a typo.
+
 2006-08-23  Mike Kelly  <pioto@pioto.org>
 
 	* bash/adduser.bash.in, bash/addgroup.bash.in: Add a check in the free
